UAI writer implementation for CONIN models

--- a/conin/common/tests/uai_writer_test.ipynb
+++ b/conin/common/tests/uai_writer_test.ipynb
@@ -2,173 +2,142 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3c498b81-5893-42de-8449-ce1be6ffdb59",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:numexpr.utils:Note: NumExpr detected 64 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 16.\n",
-      "INFO:numexpr.utils:NumExpr defaulting to 16 threads.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import conin\n",
-    "from conin.common import load_model\n",
-    "from conin.bayesian_network.model import DiscreteBayesianNetwork\n",
-    "from conin.markov_network.model import DiscreteMarkovNetwork"
+    "from conin.common import load_model, save_model\n",
+    "from conin.bayesian_network.tests.examples import cancer1_BN_pgmpy\n",
+    "from pgmpy.readwrite import UAI, BIF"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "9a4bc865-5b82-4624-8279-e9013cedaa66",
+   "cell_type": "markdown",
+   "id": "1e570be4-f09b-43b0-9430-41f7e446b3f2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# TODO check table preamble format + write Markov version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "9ba3c3c5-e98f-4295-8fbc-735235776eb5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse_bayesian_function_table(factor, node2id):\n",
-    "    '''\n",
-    "    Function to parse the preamble and function table for a DBN factor\n",
-    "    '''\n",
-    "    # TODO check on format here\n",
-    "    factor_node_ids = [node2id[n] for n in factor.nodes]  # indep_0, ..., indep_{N-2}, dep?\n",
-    "    #table_preamble = [len(factor_node_ids)] + factor_node_ids[1:] + [factor_node_ids[0]]  # N, indep_0, ..., indep_{N-2}, dep\n",
-    "    table_preamble = [len(factor_node_ids)] + factor_node_ids\n",
-    "    table_preamble = [str(d) for d in table_preamble]\n",
-    "    table_values = [str(v) for k,v in factor.values.items()]\n",
-    "    return table_preamble, table_values\n",
-    "    \n",
-    "\n",
-    "def write_bayesian_uai_file(model, file):\n",
-    "    '''\n",
-    "    Function to serialize the parameters of a DBN in UAI format\n",
-    "    Inputs:  model (conin.bayesian_network.model.DiscreteBayesianNetwork) - model to be converted\n",
-    "             file  (str) - filename of output (will end in .uai)\n",
-    "    Outputs: <file>.uai - written UAI file\n",
-    "    '''\n",
-    "\n",
-    "    # get node2id mapping\n",
-    "    node2id = {n:i for i, n in enumerate(model.nodes)}\n",
-    "\n",
-    "    # get domain sizes\n",
-    "    sizes = [str(len(model.states[n])) for n in model.nodes]\n",
-    "\n",
-    "    # get factors\n",
-    "    factors = [cpd.to_factor() for cpd in model.cpds]\n",
-    "\n",
-    "    # get function table preamble and values for each vactor\n",
-    "    tables = [parse_bayesian_function_table(factor, node2id) for factor in factors]\n",
-    "\n",
-    "    # open file\n",
-    "    with open(file.split('.')[0]+'.uai', 'w') as f:\n",
-    "        # Preamble\n",
-    "        f.write('BAYES'+'\\n')  # network type\n",
-    "        f.write(str(len(node2id))+'\\n')  # num. nodes\n",
-    "        f.write(' '.join(sizes)+'\\n')  # node domain sizes\n",
-    "        f.write(str(len(tables))+'\\n')  # num. function tables\n",
-    "        for (table_preamble, _) in tables:\n",
-    "            f.write(' '.join(table_preamble)+'\\n')  # table preamble\n",
-    "\n",
-    "        # Function Tables\n",
-    "        for (_, table_values) in tables:\n",
-    "            f.write(str(len(table_values))+'\\n')  # len table\n",
-    "            f.write(' ' + ' '.join(table_values)+'\\n')  # table values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "0b94f60c-e5c1-42e7-95f0-18b4ddaa8ed1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = load_model('asia.bif')\n",
-    "print(isinstance(model, DiscreteBayesianNetwork))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "0331159f-5302-42f2-ae15-9edebb09c063",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_bayesian_uai_file(model, 'asia_test')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "30d58618-6a44-428b-af8f-dbf355755b77",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BAYES\n",
-      "8\n",
-      "2 2 2 2 2 2 2 2\n",
-      "8\n",
-      "1 0\n",
-      "2 5 1\n",
-      "3 1 3 2\n",
-      "3 4 6 3\n",
-      "2 5 4\n",
-      "1 5\n",
-      "2 0 6\n",
-      "2 3 7\n",
-      "2\n",
-      "0.01 0.99\n",
-      "4\n",
-      "0.6 0.4 0.3 0.7\n",
-      "8\n",
-      "0.9 0.1 0.8 0.2 0.7 0.3 0.1 0.9\n",
-      "8\n",
-      "1.0 0.0 1.0 0.0 1.0 0.0 0.0 1.0\n",
-      "4\n",
-      "0.1 0.9 0.01 0.99\n",
-      "2\n",
-      "0.5 0.5\n",
-      "4\n",
-      "0.05 0.95 0.01 0.99\n",
-      "4\n",
-      "0.98 0.02 0.05 0.95\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open('asia_test.uai', 'r') as f:\n",
-    "    lines = f.readlines()\n",
-    "for line in lines:\n",
-    "    print(line.strip())"
+    "Test Bayesian Instance"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f104eaad-b155-4cc7-911e-a3d535e29c00",
+   "id": "66751729-c82c-480e-905c-aba4d1f4e474",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bn_pgm = cancer1_BN_pgmpy()\n",
+    "UAI.UAIWriter(bn_pgm).write_uai(filename='bn_cancer1.uai')\n",
+    "BIF.BIFWriter(bn_pgm).write_bif(filename='bn_cancer1.bif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eef0725e-56f7-4e51-aba4-fb073df99c94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bn_conin = load_model('bn_cancer1.uai')\n",
+    "save_model(bn_conin, 'bn_cancer1_test.uai')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcbd1cc1-86a7-4f84-a585-9cb568f36876",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bn_conin_2 = load_model('bn_cancer1_test.uai')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eb94a45-5d4c-4196-b64f-c13d1699ac49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(bn_conin.cpds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31004d72-ca0a-41fd-94ca-debb6335ca3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(bn_conin_2.cpds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adfcc0ca-0a8d-4a19-8351-dc1081cebacf",
+   "metadata": {},
+   "source": [
+    "Test Markovian Instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b31af02c-498a-4d91-9e01-afbdfa1dd99d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mn_pgm = bn_pgm.to_markov_model()\n",
+    "UAI.UAIWriter(mn_pgm).write_uai(filename='mn_cancer1.uai')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18c3c61b-24df-4919-9c9e-3c1217609955",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mn_conin = load_model('mn_cancer1.uai')\n",
+    "save_model(mn_conin, 'mn_cancer1_test.uai')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "931d3b80-6bf5-4d4c-8c20-f1f83fc92431",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mn_conin_2 = load_model('mn_cancer1_test.uai')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0319bbd1-c60d-4e4f-959d-a09e666a30e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(mn_conin.factors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5547dc0a-d1f0-46bf-a2ab-95f2ef5ea8b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(mn_conin_2.factors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec96df43-39cb-4839-b37a-dc6042f8864c",
    "metadata": {},
    "outputs": [],
    "source": []
