started working on DNA hmm

--- a/conin/mediation_variables/apt_experiments-Copy2.ipynb
+++ b/conin/mediation_variables/apt_experiments-Copy2.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "18f7981d-c8c3-484c-88ee-0b122c440925",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "ae7c4e77-0c85-46b9-abcc-593081b12f08",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "267b405f-c0ec-456f-8174-278ea70bd3f6",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "25"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "b2cbce90-46db-4966-b099-64983bc8663b",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "e791a2ec-80a5-4e44-9180-006083ce8ed5",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mismatch at time 26 out of 26\n"
+      "mismatch at time 26 out of 53\n",
+      "mismatch at time 27 out of 53\n",
+      "mismatch at time 28 out of 53\n",
+      "mismatch at time 29 out of 53\n",
+      "mismatch at time 30 out of 53\n",
+      "mismatch at time 31 out of 53\n",
+      "mismatch at time 53 out of 53\n"
      ]
     }
    ],
@@ -187,6 +193,48 @@
     "for t in range(len(opt_state)):\n",
     "    if opt_state[t] != pure_hidden[t]:\n",
     "        print(f'mismatch at time {t} out of {len(opt_state) -1}') #no rule enforcing that that must end on POST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d229bc1e-e695-4c4d-b3aa-559edb1400fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DI'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pure_hidden[26]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "968424de-d362-4529-b993-5fc2a4329c3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'EX'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt_state[26]"
    ]
   },
   {
@@ -199,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "c8227a01-abc3-46b1-b54d-458932eb9bb5",
    "metadata": {},
    "outputs": [
@@ -209,7 +257,7 @@
        "<module 'apt_helper' from '/home/fyqiu/Projects/conin/conin/mediation_variables/apt_helper.py'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "ca406f65-f588-40c3-ace9-a3331e979aa5",
    "metadata": {},
    "outputs": [],
@@ -235,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "11db78bc-7250-4015-8dc2-75af6f7049ff",
    "metadata": {},
    "outputs": [
@@ -257,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "3e0c5ce8-70f7-438d-acb6-0c68a4f4ef7b",
    "metadata": {},
    "outputs": [
@@ -267,7 +315,7 @@
        "25"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "id": "91e2e0df-387d-4085-809d-7a3664e2b12e",
    "metadata": {},
    "outputs": [],
@@ -318,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "11251cc6-a6d3-45c9-86b3-f2f34dd08bf3",
    "metadata": {},
    "outputs": [
@@ -340,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "id": "ba0eeff3-67de-4353-8643-6bbd46d9f5ee",
    "metadata": {},
    "outputs": [
@@ -350,7 +398,7 @@
        "25"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "id": "61d63360-684e-422f-a0b7-b67c602913f3",
    "metadata": {},
    "outputs": [
@@ -397,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "id": "35f8d77e-efd9-4e07-b912-071ee517ba7a",
    "metadata": {},
    "outputs": [
@@ -419,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "id": "74d2c3d6-8a09-4195-bb9f-4b25f494624e",
    "metadata": {},
    "outputs": [
@@ -445,15 +493,15 @@
        " ('COL', ('DS', 'syslog/nano')),\n",
        " ('EXF', ('HE', 'img/query')),\n",
        " ('POST', None),\n",
-       " ('WAIT_DI', None),\n",
+       " ('WAIT_CA', None),\n",
+       " ('WAIT_COL', None),\n",
        " ('WAIT_IA', None),\n",
        " ('WAIT_EXF', None),\n",
        " ('WAIT_EX', None),\n",
-       " ('WAIT_CA', None),\n",
-       " ('WAIT_COL', None)]"
+       " ('WAIT_DI', None)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "id": "50601625-b3b8-4613-85fd-b2404391cccd",
    "metadata": {},
    "outputs": [
@@ -489,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "id": "f4ef7c02-1884-4417-b9b3-1469ddb1b9d0",
    "metadata": {},
    "outputs": [
@@ -499,7 +547,7 @@
        "25"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "id": "a4b709b8-4363-4642-a74b-4005c8733f74",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "id": "355df156-1193-44fb-bb2a-5987b3bead2e",
    "metadata": {},
    "outputs": [],
@@ -1191,20 +1239,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "2dd805f6-193d-46b7-9d98-43e578321aaf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'tier_apt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtier_apt\u001b[49m.states[:\u001b[32m10\u001b[39m]\n",
-      "\u001b[31mNameError\u001b[39m: name 'tier_apt' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[('PRE', None),\n",
+       " ('IA', ('S', 'postfix/local')),\n",
+       " ('EX', ('V', 'access/bob')),\n",
+       " ('EX', ('V', 'access/sally')),\n",
+       " ('EX', ('S', 'postfix/local')),\n",
+       " ('EX', ('HI', 'img/post')),\n",
+       " ('EX', ('HE', 'img/post')),\n",
+       " ('EX', ('DS', 'syslog/nano')),\n",
+       " ('DI', ('S', 'postfix/local')),\n",
+       " ('DI', ('HI', 'usr/query'))]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1213,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 49,
    "id": "7c37c1bc-31a6-44cc-bbe7-86a251a32ae0",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1288,7 @@
        " (('EX', ('V', 'access/bob')), ('EX', ('V', 'access/bob')))]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 50,
    "id": "b15762cb-b95e-4e09-9ff9-f771d0578683",
    "metadata": {},
    "outputs": [
@@ -1270,15 +1326,15 @@
        "             (('COL', ('DS', 'syslog/nano')), ('DS', 'syslog/nano')): 1.0,\n",
        "             (('EXF', ('HE', 'img/query')), ('HE', 'img/query')): 1.0,\n",
        "             (('POST', None), None): 1.0,\n",
-       "             (('WAIT_EX', None), None): 1.0,\n",
        "             (('WAIT_CA', None), None): 1.0,\n",
        "             (('WAIT_COL', None), None): 1.0,\n",
-       "             (('WAIT_DI', None), None): 1.0,\n",
+       "             (('WAIT_IA', None), None): 1.0,\n",
        "             (('WAIT_EXF', None), None): 1.0,\n",
-       "             (('WAIT_IA', None), None): 1.0})"
+       "             (('WAIT_EX', None), None): 1.0,\n",
+       "             (('WAIT_DI', None), None): 1.0})"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 51,
    "id": "907c1cd7-5c90-4b2f-8aa1-c87b525cd78e",
    "metadata": {},
    "outputs": [
@@ -1308,7 +1364,7 @@
        " (('DI', ('HI', 'usr/query')), ('HI', 'usr/query'))]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "7fc7a662-7b1c-43c5-aeb1-ea1cb7636efb",
    "metadata": {},
    "outputs": [],
@@ -1694,26 +1750,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "86513af7-4b29-4688-a516-53751774f7f8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
-      "60\n",
-      "70\n",
-      "80\n",
-      "90\n",
-      "average proportion correct is 0.1227670640121261 and median is 0.08393445710518882 and avgtime:1.0003076410293579\n",
-      "Valid proportion:1.0 Knowledge match: 5.52 Type1err:0.0 Type2err:0.48\n"
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[53]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     13\u001b[39m running_time = time.time() - start_time\n\u001b[32m     14\u001b[39m opt_hidden, opt_emits = \u001b[38;5;28mzip\u001b[39m(*opt_state_list)\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m true_valid, true_knowledge = ahlp.check_valid(apt_truth_states, apt_truth_emits, cst_list, return_knowledge = \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     16\u001b[39m infer_valid, infer_knowledge = ahlp.check_valid(opt_hidden, opt_emits, cst_list, return_knowledge = \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     17\u001b[39m time_list.append(running_time)\n",
+      "\u001b[31mValueError\u001b[39m: too many values to unpack (expected 2)"
      ]
     }
    ],
@@ -1752,8 +1801,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "7823b7e9-d97e-4816-824b-ac946de802aa",
+   "execution_count": 54,
+   "id": "8f58f500-a03f-47a4-af4d-823d6867bf3c",
    "metadata": {},
    "outputs": [
     {
@@ -1761,36 +1810,56 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "average proportion correct is 0.12892538912018398 and median is 0.08498796630565583 and avgtime:0.9917890310287476 and proportion valid: 1.0\n"
+      "average proportion correct is 0.12987585228625081 and median is 0.07400554040600787 and avgtime:1.0635735058784486\n",
+      "Valid proportion:1.0 Knowledge match: 5.52 Type1err:0.0 Type2err:0.48\n",
+      "{'know_sally_exists': 0.27, 'have_sally_credential': 0.14, 'learn_where_data_stored': 0.09, 'have_data_on_ds': 0.08, 'have_data_on_hi': 0.07, 'have_data_on_he': 0.09}\n",
+      "Avg number of exact matches:0.58\n"
      ]
     }
    ],
    "source": [
-    "# B = 50\n",
-    "# accuracy_list = []\n",
-    "# time_list = []\n",
-    "# valid_list = []\n",
+    "B = 100\n",
+    "accuracy_list = []\n",
+    "valid_list = []\n",
+    "type1err_know = []\n",
+    "type2err_know = []\n",
+    "match_know = []\n",
+    "time_list = []\n",
+    "knowledge_times = []\n",
+    "time_tol  = 5\n",
+    "exact_match_list = []\n",
+    "tol_match_list = []\n",
+    "for b in range(B):\n",
+    "    apt_truth, combined_emits = ahlp.combined_simulation(apt_hmm, user_list, cst_list)\n",
+    "    apt_truth_states, apt_truth_emits = apt_truth\n",
+    "    start_time = time.time()\n",
+    "    opt_state_list, _= ahlp.Viterbi_torch_list(less_noisy_tier_apt, cst_list, combined_emits, sat, time_hom = True, dtype = torch.float32, device = 'cuda:0', num_cst = 0)\n",
+    "    running_time = time.time() - start_time\n",
+    "    opt_hidden, opt_emits = zip(*opt_state_list)\n",
+    "    true_valid, true_knowledge, true_times = ahlp.check_valid(apt_truth_states, apt_truth_emits, cst_list, return_knowledge = True)\n",
+    "    infer_valid, infer_knowledge, infer_times = ahlp.check_valid(opt_hidden, opt_emits, cst_list, return_knowledge = True)\n",
+    "    tol_match = ahlp.check_within_distance(true_times, infer_times, time_tol)\n",
+    "    knowledge_times.append(tol_match)\n",
+    "    tol_match_list.append(sum(tol_match))\n",
+    "    exact_match_list.append(sum([true == infer for true,infer in zip(true_times,infer_times)]))\n",
+    "    time_list.append(running_time)\n",
+    "    valid_list.append(infer_valid)\n",
+    "    type1err_know.append(len(infer_knowledge - true_knowledge))\n",
+    "    type2err_know.append(len(true_knowledge - infer_knowledge))\n",
+    "    match_know.append(len(true_knowledge.intersection(infer_knowledge)))\n",
+    "    num_correct = [est[0]== true for est,true in zip(opt_state_list, apt_truth_states)]\n",
+    "    if b % 100 == 0:\n",
+    "        print(b)\n",
+    "    accuracy_list.append(sum(num_correct)/len(num_correct))    \n",
     "\n",
-    "# for b in range(B):\n",
-    "#     apt_truth, combined_emits = ahlp.combined_simulation(apt_hmm, user_list, cst_list)\n",
-    "#     apt_truth_states, apt_truth_emits = apt_truth\n",
-    "#     start_time = time.time()\n",
-    "#     opt_state_list, _= ahlp.Viterbi_torch_list(less_noisy_tier_apt, cst_list, combined_emits, sat, time_hom = True, dtype = torch.float32, device = 'cuda:0', num_cst = 0)\n",
-    "#     running_time = time.time() - start_time\n",
-    "#     time_list.append(running_time)\n",
-    "#     opt_hidden, opt_emits = zip(*opt_state_list)\n",
-    "#     valid_list.append(ahlp.check_valid(opt_hidden, opt_emits, cst_list))\n",
-    "#     num_correct = [est[0]== true for est,true in zip(opt_state_list, apt_truth_states)]\n",
-    "#     if b % 10 == 0:\n",
-    "#         print(b)\n",
-    "#     accuracy_list.append(sum(num_correct)/len(num_correct))\n",
-    "# print(f'average proportion correct is {sum(accuracy_list)/len(accuracy_list)} and median is \\\n",
-    "# {np.median(np.array(accuracy_list))} and avgtime:{sum(time_list)/len(time_list)} \\\n",
-    "# and proportion valid: {sum(valid_list)/len(valid_list)}')"
+    "time_match = [sum(times) / len(knowledge_times) for times in zip(*knowledge_times)]\n",
+    "final_times = {c.name: time for c,time in zip(cst_list,time_match)}\n",
+    "print(f'average proportion correct is {sum(accuracy_list)/len(accuracy_list)} and median is \\\n",
+    "{np.median(np.array(accuracy_list))} and avgtime:{sum(time_list)/len(time_list)}')\n",
+    "print(f'Valid proportion:{sum(valid_list)/len(valid_list)} Knowledge match: {sum(match_know)/len(match_know)} \\\n",
+    "Type1err:{sum(type1err_know)/len(type1err_know)} Type2err:{sum(type2err_know)/len(type2err_know)}')\n",
+    "print(final_times)\n",
+    "print(f'Avg number of exact matches:{sum(exact_match_list)/len(exact_match_list)}')"
    ]
   },
   {
