--- a/conin/mediation_variables/Viterbi_v2-Copy1.ipynb
+++ b/conin/mediation_variables/Viterbi_v2-Copy1.ipynb
@@ -2,17 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "c5a243af-db56-44e7-af89-1782eec95667",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import numpy as np\n",
+    "# import torch\n",
+    "# import warnings\n",
+    "# from munch import Munch\n",
+    "# import itertools\n",
+    "# from mv_Viterbi import mv_Viterbi\n",
+    "# from cst_aggregate import cst_aggregate\n",
+    "\n",
     "import numpy as np\n",
-    "import warnings\n",
+    "import torch\n",
+    "import json\n",
     "from munch import Munch\n",
     "import itertools\n",
-    "from mv_Viterbi import mv_Viterbi\n",
-    "from cst_aggregate import cst_aggregate"
+    "from collections import defaultdict\n",
+    "import random\n",
+    "import copy\n",
+    "import pickle\n",
+    "import matplotlib.pyplot as plt\n",
+    "import importlib\n",
+    "import time\n"
    ]
   },
   {
@@ -25,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "9c49caa1-f703-4878-9114-fc57cb03ab53",
    "metadata": {},
    "outputs": [],
@@ -83,12 +97,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
+   "id": "1bf7bfa6-e92d-436c-ac62-abea9de469d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_cst_params(cst, hidden_states, dtype = torch.float16, device = 'cpu'):\n",
+    "    m_states = cst.m_states\n",
+    "    init = cst.init_fun\n",
+    "    upd = cst.update_fun\n",
+    "    eval = cst.eval_fun\n",
+    "\n",
+    "    #returns a (k,s,r) array. k is current hideen. r,s are present/past mediation.\n",
+    "    upd_mat = torch.tensor([[[upd(k,s, r) for r in m_states] for s in m_states] for k in hidden_states], dtype = dtype, device = device)\n",
+    "\n",
+    "    #returns a (k,r) array. k,r are current hidden/mediation states\n",
+    "    init_mat = torch.tensor([[init(k,r) for r in m_states] for k in hidden_states], dtype = dtype, device = device)\n",
+    "\n",
+    "    #return (k,r) array for terminal emission.\n",
+    "    eval_mat = torch.tensor([[eval(k,r) for r in m_states] for k in hidden_states], dtype = dtype, device = device)\n",
+    "\n",
+    "    return init_mat, upd_mat, eval_mat\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "cefac4ef-bb55-41a3-bb1d-748192162043",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_fun(r,k , r_past):\n",
+    "def update_fun(k , r_past, r):\n",
     "    '''\n",
     "    r = hidden_states x [1,2,3,4,5]\n",
     "    '''\n",
@@ -98,7 +137,7 @@
     "    else:\n",
     "        new_count = 1\n",
     "        \n",
-    "    consistency = (count == 5) or (k = prev) #0 if transition to new state without staying 3\n",
+    "    consistency = (count == 5) or (k == prev) #0 if transition to new state without staying 3\n",
     "\n",
     "    return (r == (k,new_count)) and consistency\n",
     "\n",
@@ -108,12 +147,45 @@
     "    '''\n",
     "\n",
     "    return r == (k,1)\n",
+    "\n",
     "    \n",
-    "# def eval_fun(r, sat):\n",
-    "#     '''\n",
-    "#     Constraint is a boolean emissions of the final auxillary state. In this case, is just m1^T: ie. tau_a >= tau_b for all time.\n",
-    "#     '''\n",
-    "#     return int(r[1] == sat) "
+    "def eval_fun(k, r):\n",
+    "    return True\n",
+    "\n",
+    "m_states = list(itertools.product(hidden_states, list(range(1,6))))\n",
+    "\n",
+    "stay_cst = Munch(update_fun = update_fun, init_fun = init_fun, eval_fun = eval_fun, m_states = m_states)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "57af1a3a-9b2b-4b96-9e0b-9780506a3f16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "update_fun('enh',('pro',4), ('enh',1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9999de93-d7ee-4f8a-a288-aa58a17ca16f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b,c = create_cst_params(stay_cst, hidden_states)"
    ]
   },
   {
@@ -126,28 +198,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "id": "0e8868ef-b179-4ac6-a5ad-b2e98e8ce822",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_fun(r,k , r_past):\n",
+    "def update_fun(k , r_past, r):\n",
     "    '''\n",
     "    r = Boolean\n",
     "    tracks if 'pro' has occured yet or not\n",
-    "    '''\n",
-    "    if k == 'pro':\n",
-    "        occur = True\n",
-    "        \n",
+    "    '''        \n",
     "\n",
-    "    return r == (r_past or occur) \n",
+    "    return r == (r_past or (k == 'pro')) \n",
     "\n",
     "def init_fun(k, r):\n",
     "\n",
     "    return r == (k == 'pro')\n",
     "\n",
-    "def eval_fun(r, sat):\n",
-    "    return r == sat"
+    "def eval_fun(k,r):\n",
+    "    return r == True\n",
+    "\n",
+    "m_states = [True,False]\n",
+    "\n",
+    "promoter_cst = Munch(update_fun = update_fun, init_fun = init_fun, eval_fun = eval_fun, m_states = m_states)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "0e81d8e8-d03e-466e-bac7-2a647dcea231",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b,c = create_cst_params(promoter_cst, hidden_states)"
    ]
   },
   {
@@ -160,12 +243,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "81f1acc6-9575-4cc3-be9e-f1ae6f51aaed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_fun(r,k , r_past):\n",
+    "def update_fun(k , r_past, r):\n",
     "    '''\n",
     "    r = [0,1,2]\n",
     "    tracks if 'pro' has occured yet or not\n",
@@ -173,7 +256,9 @@
     "    if k == 'dis':\n",
     "        count = max(r + 1, 2)\n",
     "        \n",
-    "\n",
+    "    else:\n",
+    "        count = r_past\n",
+    "    \n",
     "    return r == count \n",
     "\n",
     "def init_fun(k, r):\n",
@@ -181,7 +266,21 @@
     "    return r == int(k == 'dis')\n",
     "\n",
     "def eval_fun(r, sat):\n",
-    "    return r == 1 #must be exactly 1."
+    "    return r == 1 #must be exactly 1.\n",
+    "\n",
+    "m_states = list(range(3))\n",
+    "\n",
+    "disvisit_cst = Munch(update_fun = update_fun, init_fun = init_fun, eval_fun = eval_fun, m_states = m_states)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "48131627-56ad-4a8e-9bbf-cd168eb8382a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b,c = create_cst_params(disvisit_cst, hidden_states)"
    ]
   },
   {
@@ -194,12 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5ddddd9a-8692-4e5c-93cc-b151690edb41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_fun(r,k , r_past):\n",
+    "def update_fun(k , r_past, r):\n",
     "    '''\n",
     "    r = Boolean_pro x Bool_dis x Bool_enh\n",
     "    trcks that they occur in sequence\n",
@@ -221,7 +320,244 @@
     "\n",
     "def init_fun(k, r):\n",
     "\n",
-    "    return r == ( k == 'pro', k == 'dis', k == 'enh')\n"
+    "    return r == ( k == 'pro', k == 'dis', k == 'enh')\n",
+    "\n",
+    "def eval_fun(k,r):\n",
+    "    return True\n",
+    "\n",
+    "m_states = list(itertools.product([True, False], repeat=3))\n",
+    "\n",
+    "pde_cst = Munch(update_fun = update_fun, init_fun = init_fun, eval_fun = eval_fun, m_states = m_states)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "615560dd-41f4-45fd-9fc1-daeffead5876",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hidden_states' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m a,b,c \u001b[38;5;241m=\u001b[39m create_cst_params(pde_cst, \u001b[43mhidden_states\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hidden_states' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c = create_cst_params(pde_cst, hidden_states)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1466b5a0-71da-4114-8116-b2e021091af9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cst_list = [disvisit_cst, pde_cst]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "43229745-0333-4e8c-a2f7-9d3364c48280",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_params, testcst_params = convertTensor_list(hmm, cst_list, dtype = torch.float32, device = 'cpu', hmm_params = None, return_ix = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "50952bc9-97d2-4a9b-b2e1-e6e75037eb36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_cst_params(cst, hidden_states, dtype = torch.float16, device = 'cpu'):\n",
+    "    m_states = cst.m_states\n",
+    "    init = cst.init_fun\n",
+    "    upd = cst.update_fun\n",
+    "    eval = cst.eval_fun\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "0a33b075-8ad7-47ff-8604-d5ea8debb374",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_cst_params(cst, hidden_states, dtype = torch.float16, device = 'cpu'):\n",
+    "    m_states = cst.m_states\n",
+    "    init = cst.init_fun\n",
+    "    upd = cst.update_fun\n",
+    "    eval = cst.eval_fun\n",
+    "\n",
+    "    #returns a (k,s,r) array. k is current hideen. r,s are present/past mediation.\n",
+    "    upd_mat = torch.tensor([[[upd(k,s, r) for r in m_states] for s in m_states] for k in hidden_states], dtype = dtype, device = device)\n",
+    "\n",
+    "    #returns a (k,r) array. k,r are current hidden/mediation states\n",
+    "    init_mat = torch.tensor([[init(k,r) for r in m_states] for k in hidden_states], dtype = dtype, device = device)\n",
+    "\n",
+    "    #return (k,r) array for terminal emission.\n",
+    "    eval_mat = torch.tensor([[eval(k,r) for r in m_states] for k in hidden_states], dtype = dtype, device = device)\n",
+    "\n",
+    "    return init_mat, upd_mat, eval_mat\n",
+    "\n",
+    "def convertTensor_list(hmm, cst_list, dtype = torch.float16, device = 'cpu', hmm_params = None, return_ix = False):\n",
+    "    '''\n",
+    "    cst_list is a list of the individual csts.\n",
+    "    '''\n",
+    "    #Initialize and convert all quantities  to np.arrays\n",
+    "    hmm = copy.deepcopy(hmm)\n",
+    "    K = len(hmm.states)\n",
+    "    \n",
+    "    state_ix = {s: i for i, s in enumerate(hmm.states)}\n",
+    "    \n",
+    "    #Compute the hmm parameters if not provided\n",
+    "    if hmm_params is None:\n",
+    "        tmat = torch.zeros((K,K), dtype=dtype ).to(device)\n",
+    "        init_prob = torch.zeros(K, dtype=dtype ).to(device)\n",
+    "    \n",
+    "        for i in hmm.states:\n",
+    "            init_prob[state_ix[i]] = hmm.initprob[i]\n",
+    "            for j in hmm.states:\n",
+    "                tmat[state_ix[i],state_ix[j]] = hmm.tprob[i,j]\n",
+    "    \n",
+    "        hmm_params = [tmat, init_prob]\n",
+    "    \n",
+    "    #Compute the cst parameters \n",
+    "    init_list = []\n",
+    "    eval_list = []\n",
+    "    upd_list = []\n",
+    "    dims_list = []\n",
+    "    cst_ix = 0\n",
+    "    C = len(cst_list)\n",
+    "\n",
+    "    #indices are (hidden, c_1,....,c_C, hidden, c_1,....,c_C) are augmented messages\n",
+    "    for cst in cst_list:\n",
+    "        cst = copy.deepcopy(cst)\n",
+    "        init_mat, upd_mat, eval_mat = create_cst_params(cst, hidden_states, dtype = dtype, device = device)\n",
+    "        init_list += [init_mat,[0,cst_ix + 1]]\n",
+    "        eval_list += [eval_mat, [0, cst_ix + 1]]\n",
+    "        upd_list += [upd_mat, [0, cst_ix + 1, C + 1, cst_ix + C + 2]]\n",
+    "        dims_list.append(len(cst.m_states))\n",
+    "        cst_ix += 1\n",
+    "                \n",
+    "    cst_params = [dims_list, init_list,upd_list,upd_list]\n",
+    "\n",
+    "    if return_ix:\n",
+    "        return hmm_params, cst_params, state_ix\n",
+    "    return hmm_params, cst_params \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4b2561ca-137d-4c46-ba60-08adbfe71f4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_emitweights(obs,hmm, time_hom = True):\n",
+    "    '''\n",
+    "    Separately handles the computation of the \n",
+    "    '''\n",
+    "    hmm = copy.deepcopy(hmm) #protect again in place modification\n",
+    "    T = len(obs)\n",
+    "    K = len(hmm.states)\n",
+    "    #Compute emissions weights for easier access\n",
+    "    emit_weights = np.zeros((T,K))\n",
+    "    for t in range(T):\n",
+    "        if time_hom:\n",
+    "            emit_weights[t] = np.array([hmm.eprob[k,obs[t]] for k in hmm.states])\n",
+    "        else:\n",
+    "            emit_weights[t] = np.array([hmm.eprob[t,k,obs[t]] for k in hmm.states])\n",
+    "    return emit_weights\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91b71101-fcee-4dba-aa08-3ff61f7141a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Viterbi_torch_list(hmm, hmm_params, cst_list, obs, dtype = torch.float16,  device = 'cpu', debug = False, num_cst = 0):\n",
+    "    '''\n",
+    "    more optimized torch implementation of Viterbi. The constraint all evolve independently (ie. factorial), so no need to create a big U_krjs matrix. Instead, just multiply along given dim. Still require computing V_{krjs}, but this should help.\n",
+    "    For numerica underflow, we normalize the value at each time. Also, we add a small constant num_cst when normalizing.\n",
+    "    '''\n",
+    "    hmm = copy.deepcopy(hmm) #protect again in place modification\n",
+    "    #Generate emit_weights:\n",
+    "    emit_weights = compute_emitweights(obs, hmm, time_hom)\n",
+    "    emit_weights = torch.from_numpy(emit_weights).type(dtype).to(device)\n",
+    "\n",
+    "    #Generate hmm,cst params:\n",
+    "    hmm_params, cst_params_list, state_ix = convertTensor_list(hmm,cst_list, sat, dtype = dtype, \\\n",
+    "                                                               device = device, return_ix = True)   \n",
+    "    tmat, init_prob = hmm_params\n",
+    "    dims_list, init_ind_list,final_ind_list,ind_list = cst_params_list\n",
+    "\n",
+    "    \n",
+    "    #Viterbi\n",
+    "    T = emit_weights.shape[0]\n",
+    "    K = tmat.shape[0]\n",
+    "    C = len(dims_list)\n",
+    "    \n",
+    "    val = torch.empty((T,K) + tuple(dims_list), device = 'cpu')\n",
+    "    ix_tracker = torch.empty((T,K) + tuple(dims_list), device = 'cpu') #will store flattened indices\n",
+    "    \n",
+    "    kr_indices = list(range(C+1))\n",
+    "    kr_shape = (K,) + tuple(dims_list)\n",
+    "    js_indices = [k + C + 1 for k in kr_indices]\n",
+    "\n",
+    "    #Forward pass\n",
+    "    # V = torch.einsum('k,k,kr -> kr', init_prob, emit_weights[0], init_ind)\n",
+    "    V = torch.einsum(emit_weights[0], [0], init_prob, [0], *init_ind_list, kr_indices)\n",
+    "    V = V/(V.max() + num_cst) #normalize for numerical stability\n",
+    "    val[0] = V.cpu()\n",
+    "    for t in range(1,T):\n",
+    "        # V = torch.einsum('js,jk,krjs -> krjs',val[t-1],tmat,ind)\n",
+    "        V = torch.einsum(val[t-1].to(device), js_indices, tmat, [C+1,0], *ind_list, list(range(2*C + 2)))\n",
+    "        V = V.reshape(tuple(kr_shape) + (-1,))\n",
+    "        V = V/(V.max() + num_cst)\n",
+    "        max_ix = torch.argmax(V, axis = -1, keepdims = True)\n",
+    "        ix_tracker[t-1] = max_ix.squeeze()\n",
+    "        V = torch.take_along_dim(V, max_ix, axis=-1).squeeze()\n",
+    "        if t == T:\n",
+    "            # val[t] = torch.einsum('k,kr,kr -> kr',emit_weights[t],final_ind,V)\n",
+    "            val[t] = torch.einsum(emit_weights[t],[0], V, kr_indices,*final_ind_list, kr_indices).cpu()\n",
+    "        else:\n",
+    "            # val[t] = torch.einsum('k,kr -> kr', emit_weights[t],V)\n",
+    "            val[t] = torch.einsum(emit_weights[t],[0], V, kr_indices, kr_indices).cpu()\n",
+    "        \n",
+    "    state_ix = {v:k for k,v in state_ix.items()}\n",
+    "    #Backward pass\n",
+    "    opt_augstateix_list = []\n",
+    "    max_ix = int(torch.argmax(val[T-1]).item())\n",
+    "    unravel_max_ix = np.unravel_index(max_ix, kr_shape)\n",
+    "    opt_augstateix_list =  [np.array(unravel_max_ix).tolist()] + opt_augstateix_list\n",
+    "    \n",
+    "    ix_tracker = ix_tracker.reshape(T,-1) #flatten again for easier indexing    \n",
+    "    \n",
+    "    for t in range(T-1):\n",
+    "        max_ix =  int(ix_tracker[T-2-t,max_ix].item())\n",
+    "        unravel_max_ix = np.unravel_index(max_ix, kr_shape)\n",
+    "        opt_augstateix_list =  [np.array(unravel_max_ix).tolist()] + opt_augstateix_list\n",
+    "\n",
+    "    opt_state_list = [state_ix[k[0]] for k in opt_augstateix_list]\n",
+    "    if debug:\n",
+    "        return opt_state_list, opt_augstateix_list, val, ix_tracker\n",
+    "    return opt_state_list, opt_augstateix_list\n"
    ]
   },
   {
