got basic constrained DNA example working

--- a/conin/mediation_variables/ICML_apt.ipynb
+++ b/conin/mediation_variables/ICML_apt.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "267b405f-c0ec-456f-8174-278ea70bd3f6",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "25"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "b2cbce90-46db-4966-b099-64983bc8663b",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "e791a2ec-80a5-4e44-9180-006083ce8ed5",
    "metadata": {},
    "outputs": [
@@ -178,13 +178,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mismatch at time 26 out of 53\n",
-      "mismatch at time 27 out of 53\n",
-      "mismatch at time 28 out of 53\n",
-      "mismatch at time 29 out of 53\n",
-      "mismatch at time 30 out of 53\n",
-      "mismatch at time 31 out of 53\n",
-      "mismatch at time 53 out of 53\n"
+      "mismatch at time 34 out of 44\n",
+      "mismatch at time 35 out of 44\n",
+      "mismatch at time 36 out of 44\n",
+      "mismatch at time 37 out of 44\n",
+      "mismatch at time 38 out of 44\n",
+      "mismatch at time 39 out of 44\n",
+      "mismatch at time 40 out of 44\n",
+      "mismatch at time 41 out of 44\n",
+      "mismatch at time 42 out of 44\n",
+      "mismatch at time 43 out of 44\n"
      ]
     }
    ],
@@ -197,17 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "d229bc1e-e695-4c4d-b3aa-559edb1400fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'DI'"
+       "'WAIT_EX'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,17 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "968424de-d362-4529-b993-5fc2a4329c3e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'EX'"
+       "'WAIT_EX'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "c8227a01-abc3-46b1-b54d-458932eb9bb5",
    "metadata": {},
    "outputs": [
@@ -257,7 +260,7 @@
        "<module 'apt_helper' from '/home/fyqiu/Projects/conin/conin/mediation_variables/apt_helper.py'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "ca406f65-f588-40c3-ace9-a3331e979aa5",
    "metadata": {},
    "outputs": [],
@@ -283,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "11db78bc-7250-4015-8dc2-75af6f7049ff",
    "metadata": {},
    "outputs": [
@@ -445,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "35f8d77e-efd9-4e07-b912-071ee517ba7a",
    "metadata": {},
    "outputs": [
@@ -467,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "74d2c3d6-8a09-4195-bb9f-4b25f494624e",
    "metadata": {},
    "outputs": [
@@ -493,15 +496,15 @@
        " ('COL', ('DS', 'syslog/nano')),\n",
        " ('EXF', ('HE', 'img/query')),\n",
        " ('POST', None),\n",
-       " ('WAIT_CA', None),\n",
-       " ('WAIT_COL', None),\n",
-       " ('WAIT_IA', None),\n",
        " ('WAIT_EXF', None),\n",
+       " ('WAIT_CA', None),\n",
        " ('WAIT_EX', None),\n",
-       " ('WAIT_DI', None)]"
+       " ('WAIT_DI', None),\n",
+       " ('WAIT_IA', None),\n",
+       " ('WAIT_COL', None)]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
