--- a/conin/tests/tb2_knapsack.ipynb
+++ b/conin/tests/tb2_knapsack.ipynb
@@ -36,8 +36,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "([0, 1], 2.0, 1)New solution: 2 (0 backtracks, 0 nodes, depth 2, 0.000 seconds)\n",
-      "\n",
+      "([0, 1], 2.0, 1)\n",
+      "New solution: 2 (0 backtracks, 0 nodes, depth 2, 0.000 seconds)\n",
       " 0 1\n"
      ]
     }
@@ -86,9 +86,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "([1, 1], 3.0, 1)New solution: 3 (0 backtracks, 0 nodes, depth 2, 0.000 seconds)\n",
-      " 1 1\n",
-      "\n"
+      "([1, 1], 3.0, 1)\n",
+      "New solution: 3 (0 backtracks, 0 nodes, depth 2, 0.000 seconds)\n",
+      " 1 1\n"
      ]
     }
    ],
@@ -131,30 +131,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "302970a8-31ce-4abd-8e57-d6664b1c706c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([1, 0], 4.0, 1)\n",
+      "New solution: 4 (0 backtracks, 0 nodes, depth 2, 0.000 seconds)\n",
+      " 1 0\n"
+     ]
+    }
+   ],
    "source": [
     "# problem definition\n",
     "top = 16\n",
-    "Problem2 = pytoulbar2.CFN(top)\n",
+    "Problem3 = pytoulbar2.CFN(top)\n",
     "\n",
     "# variable definitions\n",
     "for i in range(2):\n",
-    "    Problem2.AddVariable('X'+str(i+1), [0, 1])\n",
+    "    Problem3.AddVariable('X'+str(i+1), [0, 1])\n",
     "\n",
     "# position costs\n",
-    "Problem2.AddFunction([0, 1], [5, 2, 4, 3])\n",
+    "Problem3.AddFunction([0, 1], [5, 2, 4, 3])\n",
     "\n",
     "# constraints\n",
-    "Problem2.AddLinearConstraint([2, -2], [0, 1], '>=', -1)\n",
+    "Problem3.AddLinearConstraint([2, -2], [0, 1], '>=', -1)\n",
+    "Problem3.AddLinearConstraint([1, 3], [0, 1], '<=', 2)\n",
     "\n",
     "# solve\n",
-    "res2 = Problem2.Solve(showSolutions=1)\n",
-    "if res2:\n",
-    "    print(res2)"
+    "res3 = Problem3.Solve(showSolutions=1)\n",
+    "if res3:\n",
+    "    print(res3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7d5f718-3e4f-4a62-892c-b85cf5a592b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
