Applied black to all files including jupyter notebooks

--- a/conin/mediation_variables/Constrained_EM.ipynb
+++ b/conin/mediation_variables/Constrained_EM.ipynb
@@ -495,13 +495,9 @@
     "                    * c_fun(k, r)\n",
     "                )\n",
     "                V[t, k, r] = val_fun(Z, Y).max().item()\n",
-    "                e_fun = (\n",
-    "                    lambda z, y: tmat[z, k] * V[t - 1, z, y] * y_fun(r, z, y)\n",
-    "                )\n",
+    "                e_fun = lambda z, y: tmat[z, k] * V[t - 1, z, y] * y_fun(r, z, y)\n",
     "                E_val = e_fun(Z, Y)\n",
-    "                E[t - 1, k, r] = np.unravel_index(\n",
-    "                    np.argmax(E_val), E_val.shape\n",
-    "                )"
+    "                E[t - 1, k, r] = np.unravel_index(np.argmax(E_val), E_val.shape)"
    ]
   },
   {
@@ -619,9 +615,7 @@
     "                    * c_fun(k, r)\n",
     "                )\n",
     "                V[t, k, r] = maximize(val_fun, n_s, 2, ret_val=True)\n",
-    "                e_fun = (\n",
-    "                    lambda z, y: tmat[z, k] * V[t - 1, z, y] * y_fun(r, z, y)\n",
-    "                )\n",
+    "                e_fun = lambda z, y: tmat[z, k] * V[t - 1, z, y] * y_fun(r, z, y)\n",
     "                E[t - 1, k, r] = maximize(e_fun, n_s, 2, ret_val=False)\n",
     "\n",
     "max_prob = V[T - 1, :, :].max().item()"
