--- a/conin/mediation_variables/working.ipynb
+++ b/conin/mediation_variables/working.ipynb
@@ -189,9 +189,7 @@
     "\n",
     "    for k in hmm.states:\n",
     "        for r in aux_space:\n",
-    "            val[0, k, r] = (\n",
-    "                cst.init_fun(k, r) * hmm.initprob[k] * hmm.eprob[k, obs[0]]\n",
-    "            )\n",
+    "            val[0, k, r] = cst.init_fun(k, r) * hmm.initprob[k] * hmm.eprob[k, obs[0]]\n",
     "\n",
     "    ix_tracker = {}\n",
     "\n",
@@ -206,19 +204,13 @@
     "                for j in hmm.states:\n",
     "                    for s in aux_space:\n",
     "                        curr_val = (\n",
-    "                            val[t - 1, j, s]\n",
-    "                            * hmm.tprob[j, k]\n",
-    "                            * cst.update_fun(r, j, s)\n",
+    "                            val[t - 1, j, s] * hmm.tprob[j, k] * cst.update_fun(r, j, s)\n",
     "                        )\n",
     "                        if curr_val > max_val:\n",
     "                            max_val = curr_val\n",
     "                            argmax = (j, s)\n",
-    "                if t == (\n",
-    "                    len(obs) - 1\n",
-    "                ):  # ie. at the last time we add in the constraint\n",
-    "                    val[t, k, r] = (\n",
-    "                        max_val * hmm.eprob[k, obs[t]] * cst.cst_fun(r, sat)\n",
-    "                    )\n",
+    "                if t == (len(obs) - 1):  # ie. at the last time we add in the constraint\n",
+    "                    val[t, k, r] = max_val * hmm.eprob[k, obs[t]] * cst.cst_fun(r, sat)\n",
     "                else:\n",
     "                    val[t, k, r] = max_val * hmm.eprob[k, obs[t]]\n",
     "                ix_tracker[t - 1, k, r] = argmax\n",
@@ -560,9 +552,7 @@
     "\n",
     "    for k in hmm.states:\n",
     "        for r in aux_space:\n",
-    "            val[0, k, r] = (\n",
-    "                cst.init_fun(k, r) * hmm.initprob[k] * hmm.eprob[k, obs[0]]\n",
-    "            )\n",
+    "            val[0, k, r] = cst.init_fun(k, r) * hmm.initprob[k] * hmm.eprob[k, obs[0]]\n",
     "\n",
     "    ix_tracker = {}\n",
     "\n",
@@ -577,19 +567,13 @@
     "                for j in hmm.states:\n",
     "                    for s in aux_space:\n",
     "                        curr_val = (\n",
-    "                            val[t - 1, j, s]\n",
-    "                            * hmm.tprob[j, k]\n",
-    "                            * cst.update_fun(r, j, s)\n",
+    "                            val[t - 1, j, s] * hmm.tprob[j, k] * cst.update_fun(r, j, s)\n",
     "                        )\n",
     "                        if curr_val > max_val:\n",
     "                            max_val = curr_val\n",
     "                            argmax = (j, s)\n",
-    "                if t == (\n",
-    "                    len(obs) - 1\n",
-    "                ):  # ie. at the last time we add in the constraint\n",
-    "                    val[t, k, r] = (\n",
-    "                        max_val * hmm.eprob[k, obs[t]] * cst.cst_fun(r, sat)\n",
-    "                    )\n",
+    "                if t == (len(obs) - 1):  # ie. at the last time we add in the constraint\n",
+    "                    val[t, k, r] = max_val * hmm.eprob[k, obs[t]] * cst.cst_fun(r, sat)\n",
     "                else:\n",
     "                    val[t, k, r] = max_val * hmm.eprob[k, obs[t]]\n",
     "                ix_tracker[t - 1, k, r] = argmax\n",
@@ -961,9 +945,7 @@
     "        for i in hmm.states:\n",
     "            init_ind[aux_ix[r], state_ix[i]] = cst.init_fun(i, r)\n",
     "            for s in aux_space:\n",
-    "                ind[aux_ix[r], state_ix[i], aux_ix[s]] = cst.update_fun(\n",
-    "                    r, i, s\n",
-    "                )\n",
+    "                ind[aux_ix[r], state_ix[i], aux_ix[s]] = cst.update_fun(r, i, s)\n",
     "\n",
     "    cst_params = [init_ind, final_ind, ind]\n",
     "\n",
@@ -1076,9 +1058,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mv_EM(\n",
-    "    obs, hmm, cst, sat=True, conv_tol=1e-10, max_iter=1000, emit_opt=None\n",
-    "):\n",
+    "def mv_EM(obs, hmm, cst, sat=True, conv_tol=1e-10, max_iter=1000, emit_opt=None):\n",
     "\n",
     "    # Convert everything into numpy arrays\n",
     "    old_hmm_params, cst_params = arrayConvert(obs, hmm, cst, sat)\n",
